"fix HEADER text on mobile display"

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ section {
     }
     header h2 {
         font-size: 1rem;
-        width: 8rem;
+        width: 8.5rem;
         margin-left: .75rem;
     }
     header button {
